--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.wave {
+	background-image: linear-gradient(
+			-45deg,
+			transparent 75%,
+			hsl(122, 80%, 60%) 75%
+		),
+		linear-gradient(45deg, transparent 75%, hsl(122, 80%, 60%) 75%),
+		linear-gradient(-135deg, transparent 75%, hsl(122, 80%, 60%) 75%),
+		linear-gradient(135deg, transparent 75%, hsl(122, 80%, 60%) 75%);
+	background-size: 2rem 2rem;
+	background-position: 1rem 0, 1rem 0, 0 0, 0 0;
+}
+
+.checkered {
+	background-image: linear-gradient(
+			transparent 50%,
+			hsl(122, 73%, 75%, 0.5) 50%
+		),
+		linear-gradient(90deg, hsl(122, 39%, 52%) 50%, hsl(122, 59%, 30%) 50%);
+	background-size: 4rem 4rem;
+}
